--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>You need JavaScript - Viking Robotics</title>
 </head>
 
 <body>
   <noscript>
-    You need to enable JavaScript to run this app.
+    Whoops, you need JavaScript to view this site.
   </noscript>
   <div id="root"></div>
   <!--
